# Write-me-a-coverLetter

./: .env.example  .gitignore  DEV_PLAN.md  LICENSE  README.md  pyproject.toml
backend/: README.md
backend/app/: main.py
backend/app/chains/: extract_jd.py  extract_resume.py  generate_letter2.py  plan_letter.py
backend/app/clients/: filecap.py
backend/app/core/: config.py  errors.py
backend/app/db/: engine.py  models.py  session.py
backend/app/guardrails/: validate.py
backend/app/prompts/: letter.txt  normalize.txt  short.txt
backend/app/providers/: base.py  filecapable.py  gemini.py
backend/app/routers/: __init__.py  audit.py  exports.py  extract_llm.py  generate.py  jobs.py  letter2.py  resumes.py
backend/app/schemas/: audit.py  export.py  extract.py  generate.py  job.py  resume.py
backend/app/services/: anchor.py  audit.py  detect.py  generation.py  ingestion.py  match_select.py  matching.py  ocr.py  parsing.py  render.py
docs/: README.md
docs/schemas/: jd_v1.json  plan_v1.json  resume_v1.json
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: A4Preview.tsx  LanguageSwitch.tsx  ResumeCard.tsx  StyleSelector.tsx  TagFilter.tsx  UploadDropzone.tsx
frontend/src/i18n/: index.ts
frontend/src/routes/: Compose.tsx  Library.tsx  Questions.tsx
scripts/: README.md
storage/: README.md  app.db
templates/: README.md
workers/filecap_service/: README.md  main.py  pyproject.toml
(+5 files in other folders)
